--- a/css/custom.css
+++ b/css/custom.css
@@ -12,8 +12,8 @@
 }
 
 .imgsize500{
-    height: 100%;
-    width: 100%;
+    /* height: 100%;
+    width: 100%; */
     border-radius: 15px;
 }
 
@@ -30,3 +30,6 @@
     height: 100%;
     width: 100%;
   }
+
+
+
