--- a/css/industrial.css
+++ b/css/industrial.css
@@ -1,6 +1,6 @@
 
 
-  h1 {
+h1 {
     text-align: center;
     color: #333333;
   }
@@ -12,7 +12,7 @@
     margin-bottom: 20px;
     display: flex;
     flex-direction: row;
-    border: 2px solid #333333;
+    border: 2px solid #333333
   }
 
   .panel h2 {
